<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityQuiz.quiz2Preguntas.Pregunta4Quiz2Activity"
    android:background="#FFC90E">

    <ImageView
        android:id="@+id/imgPregunta4"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@drawable/aguilaimperial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tvPregunta4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_p4"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729"
        android:layout_marginTop="93dp">

        <Button
            android:id="@+id/btnOpcion1Aguila"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes"
            android:text="@string/tv_aguila1"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnOpcion2Aguila"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordes"
            android:text="@string/tv_aguila2"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnOpcion3Aguila"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordes"
            android:text="@string/tv_aguila3"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnOpcion4Aguila"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordes"
            android:text="@string/tv_aguila4"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSiguienteQ2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes"
        android:text="@string/btn_siguiente"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

</androidx.constraintlayout.widget.ConstraintLayout>