<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityQuiz.quiz2Preguntas.Pregunta1Quiz2Activity"
    android:padding="10dp"
    android:background="#FFC90E">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:background="@drawable/linceiberico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_p1"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757">

        <Button
            android:id="@+id/btnOpcion1Lince"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordes"
            android:text="@string/tv_lince_iberico"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnOpcion2Lince"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordes"
            android:text="@string/tv_ince_boreal"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnOpcion3Lince"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordes"
            android:text="@string/tv_lince_rojo"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnOpcion4Lince"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordes"
            android:text="@string/tv_lince_canadiense"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSiguienteQ2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes"
        android:padding="10dp"
        android:text="@string/btn_siguiente"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

</androidx.constraintlayout.widget.ConstraintLayout>